# MyEdMaster-ASUCapstone-LLM-Generated-Customized-Instructional-Content

./: 485FineTuneExperiment_2.ipynb  README.md  pyproject.toml
assessment_module/: AssessmentoutputExample.json  AssessmetnModinputExample.json  requirements.txt  self_assessment_module.py  test1.py
assessment_module/self-assessment-frontend/: package-lock.json  package.json  tailwind.config.js
assessment_module/self-assessment-frontend/src/: App.js
assessment_module/self-assessment-frontend/src/components/: AssessmentResult.js  Layout.js  LoadingSpinner.js  SubjectCard.js
assessment_module/self-assessment-frontend/src/services/: api.js
src/custom_course_generator/: crew.py  main.py
src/custom_course_generator/config/: agents.yaml  tasks.yaml
