[project]
name = "custom_course_generator"
version = "0.1.0"
description = "custom_course_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
custom_course_generator = "custom_course_generator.main:run"
run_crew = "custom_course_generator.main:run"
train = "custom_course_generator.main:train"
replay = "custom_course_generator.main:replay"
test = "custom_course_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
